# AI-nterview

./: .eslintrc  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json  pyproject.toml
ai_nterview/: main.py
main/: background.ts
renderer/: tsconfig.tsbuildinfo
renderer/pages/: home.tsx
renderer/styles/: globals.css
