[tool.poetry]
name = "ai-nterview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.1"
pyaudio = "^0.2.14"
openai = "^1.30.3"
setuptools = "^70.0.0"
pyqt6 = "^6.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
